css/hanzi-graph.css
body { 
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    color: #eee;
    background: #121212;
}
#container {
    display: flex;
    width: 100%;
    height: 100%;
}
#control-pane {
    width: 35%;
    height: 100%;
    background: #121212;
    display: flex;
    flex-direction: column;
    overflow: auto;
}
#graph {
    width: 65%;
    height: 100%;
    background: #3333;
}

#control-pane input[type=text]{
    width: 50px;
}
ul {
    list-style-type: none;
    padding: 0;
}
h1 {
    margin-left: 10px;
    margin-bottom: 0;
}
h2 {
    margin-bottom: 0;
    cursor: pointer;
    font-size: 26px;
}
h2 span {
    font-weight: normal;
}
.circle {
    width: 32px;
    height: 32px;
    border-radius: 50%;
    margin-bottom: 4px;
    font-size: 10px;
    text-align: center;
    line-height: 32px;
    color: black;
}
#legend {
    margin-left: 10px;
    font-size: 12px;
}
#level-container {
    display: flex;
    justify-content: center;
    align-items: center;
}
#examples ul li {
    font-size: 14px;
    margin-bottom: 12px;
}
#examples ul {
    margin-left: 0px;
    margin-right: 4px;
}
p.example-line {
    margin-top: 4px;
    margin-bottom: 4px;
}
p.zh-example {
    font-size: 24px;
    cursor: pointer;
}
.pinyin-example {
    display: none;
}
#show-pinyin:checked ~ * .pinyin-example {
    display: block;
}
#controls {
    margin-bottom: 0;
    margin-top: 0;
}
#controls li {
    margin-bottom: 6px;
}
#controls li form {
    margin-bottom: 4px;
}
#example-container {
    flex-grow: 1;
    margin-left: 12px;
}
#study-container {
    flex-grow: 1;
    margin-left: 12px;
}
.walkthrough p {
    margin-top: 20px;
    margin-bottom: 20px;
}

.walkthrough a {
    color: #eee;
}

.text-button {
    font-size: 16px;
    background-color: blue;
    margin-left: 4px;
    padding: 6px;
    color: #eee;
    border-radius: 2px;
}
.text-button:hover {
    color: white;
    cursor: pointer;
    background-color: cornflowerblue;
}
.sentence-container {
    display: inline-block;
    max-width: 80%;
}
p .text-button.listen {
    display: inline-block;
    vertical-align: top;
}
h2 .text-button {
    vertical-align: middle;
}
/*TODO refactor this...too much repetition, selectors too specific */
#examples ul.definition li {
    margin-top: 4px;
    margin-bottom: 4px;
    font-size: 12px;
}

.tabs ul {
    padding-bottom: 10px;
    border-bottom: 8px solid blue;
}
.tab {
    font-size: 20px;
    display: inline;
    text-align: center;
    cursor: pointer;
    margin-left: 4px;
    margin-right: 4px;
    padding: 12px;
    background-color: blue;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.tab.active {
    font-weight: bold;
}

.tab.active:hover {
    color: #eee;
    background-color: blue;
}

.tab:hover {
    color: white;
    background-color: cornflowerblue;
}

#study-call-to-action {
    cursor: default;
}

#study-container a {
    color: #eee;
}

.study-call-to-action {
    width: 95%;
    text-align: center;
    background-color: blue;
    padding: 8px;
    cursor: pointer;
    font-size: 20px;
}
#result-buttons{
    width: 100%;
}
#result-buttons li {
    width: 75%;
    padding: 8px;
    text-align: center;
    cursor: pointer;
    margin-bottom: 12px;
    border-radius: 10px;
    margin-right: auto;
    margin-left: auto;
    font-size: 20px;
}
#result-buttons li:hover {
    color: white;
}
#wrong-button {
    background-color: red;
}
#right-button {
    background-color: green;
}
#card-question-container a {
    font-size: 24px;
    vertical-align: text-top;
    cursor: pointer;
}
#card-answer {
    font-size: 24px;
}
#delete-card-button {
    margin-right: auto;
    margin-left: auto;
    text-align: center;
    width: 50%;
}
#show-answer-button:hover {
    background-color: cornflowerblue;
}

@media (max-width:650px)  {
    #container {
        display: block;
    }
    #control-pane {
        width: 100%;
        height: 50%;
    }
    #graph {
        width: 100%;
        height: 50%;
    }
    h1 {
        margin-top: 0;
        font-size: 20px;
    }
    .tab {
        font-size: 14px;
    }
}

